--- a/src/styles/scaffolding.styl
+++ b/src/styles/scaffolding.styl
@@ -113,7 +113,7 @@ code
 	padding 2px 6px
 
 // Other generic stuff
-.ui-draggable-handle
+[draggable-item]
 	cursor move
 
 // TODO change to footer element
