refactor(lightbox): Use angular-bootstrap-lightbox instead of MagnificPopup.

--- a/src/styles/modals.styl
+++ b/src/styles/modals.styl
@@ -23,7 +23,6 @@
 // Modals
 //
 
-
 // :modals
 .modal-dialog
 	overflow hidden
@@ -54,6 +53,12 @@
 		margin-top 0
 .modal--with-overflow > .modal-dialog
 	overflow visible
+
+.modal-dialog > .modal-content > .modal--lightbox > .modal-body
+	padding-left 5px
+	padding-right 5px
+	padding-top 5px
+	text-align center
 
 // accordion panels in modals
 .modal-body > uib-accordion > .panel-group > .panel > .panel-collapse
