--- a/src/app/games/details/medium.info.modal.pug
+++ b/src/app/games/details/medium.info.modal.pug
@@ -5,9 +5,8 @@ include ../../template/_mixins
 
 		//-- IMAGE
 		//---------------------------------------------------------------------
-		a.a#lightbox(ng-href="{{ vm.medium.file.variations['full'].url }}", ng-class="{ nopointer: !vm.medium.file.variations['full'] }")
-			img.img.img--rounded.loaded.padder-bottom.fullwidth(ng-src="{{ vm.medium.file.variations['medium-2x'].url }}")
-
+		a.a(ng-click="vm.Lightbox.openModal([vm.shot], 0)", ng-class="{ nopointer: !vm.shot.url }")
+			img.img.img--rounded.loaded.padder-bottom.fullwidth(ng-src="{{ vm.shot.thumbUrl }}")
 
 		//-- STATS
 		//---------------------------------------------------------------------
