--- a/src/app/releases/details/release.details.pug
+++ b/src/app/releases/details/release.details.pug
@@ -16,8 +16,8 @@ include ../../template/_mixins
 
 		.padder-horizontal(uib-carousel, active="slide.active", interval="60000")
 			div(uib-slide, ng-repeat="slide in vm.shots", index="slide.index")
-				a.image(href="{{ slide.full }}")
-					img(ng-src="{{ slide.url }}")
+				a.image(ng-click="vm.Lightbox.openModal(vm.shots, $index)")
+					img(ng-src="{{ slide.thumbUrl }}")
 
 		//-- RELEASE RATING
 		//---------------------------------------------------------------------
