--- a/src/index.pug
+++ b/src/index.pug
@@ -25,6 +25,9 @@ html#app(lang="en")
 		link(rel="mask-icon", href="/favicon/safari-pinned-tab.svg", color="#5bbad5")
 		link(rel="shortcut icon", href="/favicon.ico")
 
+		if htmlWebpackPlugin.options.config.rum.uptimia
+			script var _uptm="#{htmlWebpackPlugin.options.config.rum.uptimia}";!function(){if("undefined"!=typeof window.performance&&"undefined"!=typeof window.performance.timing&&"undefined"!=typeof window.performance.navigation){var a=document.createElement("script");a.setAttribute("src","https://cdn.uptimia.com/rum.min.js"),a.async=!0,document.getElementsByTagName("head")[0].appendChild(a)} window.onerror=function(a,b,c,d,e){setTimeout(function(){if (typeof reportRUMUptimia !== "undefined" && typeof reportRUMUptimia === 'function') { reportRUMUptimia(a,b,c,d,e); }},1e3)}; }(window);
+
 		meta(name="msapplication-TileColor", content="#ec843d")
 		meta(name="msapplication-config", content="/favicon/browserconfig.xml")
 		meta(http-equiv="X-UA-Compatible", content="IE=Edge")
@@ -131,5 +134,5 @@ html#app(lang="en")
 			script(type="text/javascript" src=jsFileName)
 
 		//- Google Analytics
-		if htmlWebpackPlugin.options.ga.enabled
+		if htmlWebpackPlugin.options.config.ga.enabled
 			script(type="text/javascript") (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q || []).push(arguments)},i[r].l=1 * new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
