--- a/src/index.pug
+++ b/src/index.pug
@@ -25,8 +25,12 @@ html#app(lang="en")
 		link(rel="mask-icon", href="/favicon/safari-pinned-tab.svg", color="#5bbad5")
 		link(rel="shortcut icon", href="/favicon.ico")
 
-		if htmlWebpackPlugin.options.config.rum.uptimia
+		if htmlWebpackPlugin.options.config.raygun && htmlWebpackPlugin.options.config.raygun.enabled
+			script !function(a,b,c,d,e,f,g,h){a.RaygunObject=e, a[e] = a[e] || function() { (a[e].o=a[e].o || []).push(arguments)},f=b.createElement(c), g = b.getElementsByTagName(c)[0], f.async=1, f.src = d, g.parentNode.insertBefore(f, g), h = a.onerror, a.onerror = function(b, c, d, f, g) { h&&h(b,c,d,f,g),g||(g=new Error(b)),a[e].q=a[e].q || [], a[e].q.push({ e:g})}}(window,document,"script","//cdn.raygun.io/raygun4js/raygun.min.js","rg4js");
+		if htmlWebpackPlugin.options.config.rum && htmlWebpackPlugin.options.config.rum.uptimia
 			script var _uptm="#{htmlWebpackPlugin.options.config.rum.uptimia}";!function(){if("undefined"!=typeof window.performance&&"undefined"!=typeof window.performance.timing&&"undefined"!=typeof window.performance.navigation){var a=document.createElement("script");a.setAttribute("src","https://cdn.uptimia.com/rum.min.js"),a.async=!0,document.getElementsByTagName("head")[0].appendChild(a)} window.onerror=function(a,b,c,d,e){setTimeout(function(){if (typeof reportRUMUptimia !== "undefined" && typeof reportRUMUptimia === 'function') { reportRUMUptimia(a,b,c,d,e); }},1e3)}; }(window);
+
+
 
 		meta(name="msapplication-TileColor", content="#ec843d")
 		meta(name="msapplication-config", content="/favicon/browserconfig.xml")
