fix(home): Change title links to something more precise.

--- a/src/app/home/home.pug
+++ b/src/app/home/home.pug
@@ -78,7 +78,7 @@ include ../template/_mixins
 		h1.h--primary
 			| Latest Releases
 			a.font-content.shift-down.pull-right(ui-sref="releases")
-				| More
+				| All Releases
 				+icon('angle-right').smaller.space-left
 		hr
 		.row.fade2-animation
@@ -117,7 +117,7 @@ include ../template/_mixins
 		h1.h--primary
 			| Popular Games
 			a.font-content.shift-down.pull-right(ui-sref="games")
-				| More
+				| All Games
 				+icon('angle-right').smaller.space-left
 		hr
 
