--- a/src/app/releases/details/release.details.pug
+++ b/src/app/releases/details/release.details.pug
@@ -64,7 +64,7 @@ include ../../template/_mixins
 
 		//-- AUTHOR ZONE
 		//---------------------------------------------------------------------
-		#admin-zone.panel--rect-block.padder-top(ng-show="(vm.AuthService.hasPermission('releases/update-own') && vm.AuthService.isAuthor(vm.release)) || vm.AuthService.hasPermission('releases/update')")
+		#admin-zone.panel--rect-block.padder-top(ng-if="(vm.AuthService.hasPermission('releases/update-own') && vm.AuthService.isAuthor(vm.release)) || vm.AuthService.hasPermission('releases/update')")
 			h1.text-center
 				+icon('gear').space-right
 				| {{ vm.zoneName }} Zone
@@ -77,7 +77,7 @@ include ../../template/_mixins
 					li: a#release-edit-btn.text-center(ui-sref="editRelease({ id: vm.game.id, releaseId: vm.release.id })")
 						+icon('pencil-circle').space-right.shift-up
 						| Edit Release
-					li(ng-hide="vm.release.moderation && !vm.release.moderation.is_approved")
+					li(ng-if="!vm.release.moderation || vm.release.moderation.is_approved")
 						input#show-moderation.checkbox--toggle(type='checkbox', ng-model="vm.showModeration")
 						label(for="show-moderation")
 						label.a.a--light(for="show-moderation") Show Moderation
