--- a/src/app/app.pug
+++ b/src/app/app.pug
@@ -37,7 +37,7 @@ nav.navbar.navbar-default.navbar-fixed-top(ng-cloak, ng-init="navCollapsed = tru
 							a(ui-sref="adminUsers", ng-click="navCollapsed = true")
 								+icon('users').space-right.shift-up
 								span Users
-						li(ng-if="vm.AuthService.hasPermission('tokens/application-token')")
+						li(ng-if="vm.AuthService.hasPermission('tokens/provider-token')")
 							a(ui-sref="adminTokens", ng-click="navCollapsed = true")
 								+icon('key').space-right.shift-up
 								span Tokens
