fix: Put proper background to white-themed mentio items.

--- a/src/styles/colors/lists.styl
+++ b/src/styles/colors/lists.styl
@@ -53,6 +53,14 @@
 // --------------------------------------------------
 .theme-light
 
+	mentio-menu .list-group > li
+		background-color rgba(209, 209, 209, 0.85)
+		&.active
+			background-color rgba(179, 179, 179, 0.77)
+			border-color $color-primary
+			&:hover
+				background-color rgba(164, 164, 164, 0.77)
+
 	.list-group > li
 		background-color transparent
 
