--- a/src/styles/utilities.styl
+++ b/src/styles/utilities.styl
@@ -82,6 +82,8 @@
 .padder-horizontal-3x
 	padding-left 15px
 	padding-right 15px
+.padder-nobottom-only
+	margin-bottom 0 !important
 
 .content-end
 	margin-top 20px
