--- a/src/app/admin/uploads/uploads.helper.mixins.pug
+++ b/src/app/admin/uploads/uploads.helper.mixins.pug
@@ -67,8 +67,8 @@ mixin blockmatches(vm, entity)
 //-- HISTORY
 //---------------------------------------------------------------------
 mixin history(entity)
-	h3.h--smaller.h--primary History
-	table.table.table-striped
+	h3.h--smaller.h--primary(ng-if=`${entity}.history && ${entity}.history.length`) History
+	table.table.table-striped(ng-if=`${entity}.history && ${entity}.history.length`)
 		colgroup
 			col
 			col(width="20px")
@@ -104,7 +104,7 @@ mixin message(vm, entity, sendMessageOnly)
 	.form-group(ng-class=`{ error: ${vm}.errors.message }`)
 		editor.tabset--light(ng-model=`${vm}.message`, user=`${vm}.AuthService.user`, placeholder="Message to user (mandatory if refusal)", markdown-text="Markdown enabled.")
 	if sendMessageOnly
-		button.btn.btn-hollow.pull-right.shift-up-3x(ng-click=`${vm}.sendMessage()`, ng-disabled="submitting") Send Message Only
+		button.btn.btn-hollow.pull-right(ng-click=`${vm}.sendMessage()`, ng-disabled="submitting") Send Message Only
 	div.alert.alert-danger.padder-bottom(ng-show=`${vm}.errors.message`)
 		+icon('warning').shift-up.space-right
 		| {{ #{vm}.errors.message }}
