fix(admin): Fix backglass approval dialog.

--- a/src/app/admin/uploads/uploads.backglass.moderate.admin.modal.pug
+++ b/src/app/admin/uploads/uploads.backglass.moderate.admin.modal.pug
@@ -18,8 +18,8 @@ include ./uploads.helper.mixins.pug
 
 		+info('vm.backglass')
 		+authors('vm.backglass')
-		+history('vm.backglass')
-		+message('vm', 'vm.backglass', false)
+		+history('vm.backglass.moderation')
+		+message('vm', 'vm.backglass')
 
 		.clearfix.padder-top
 	.modal-footer
