--- a/src/app/admin/uploads/uploads.release.moderate.admin.modal.pug
+++ b/src/app/admin/uploads/uploads.release.moderate.admin.modal.pug
@@ -16,7 +16,8 @@ include ./uploads.helper.mixins.pug
 		+info('vm.release')
 		+authors('vm.release')
 		+blockmatches('vm', 'vm.release')
-		+history('vm.release')
+		+history('vm.release.moderation')
+		+message('vm', 'vm.release')
 
 		.clearfix.padder-top
 	.modal-footer
