--- a/src/app/admin/uploads/uploads.helper.mixins.pug
+++ b/src/app/admin/uploads/uploads.helper.mixins.pug
@@ -85,7 +85,7 @@ mixin history(entity)
 
 //-- MESSAGE
 //---------------------------------------------------------------------
-mixin message(vm, entity, sendMessageOnly)
+mixin message(vm, entity)
 	h3.h--smaller.h--primary Message
 	.media.media--no-margin.collapse-in-animation(ng-repeat=`comment in ${entity}.comments track by comment.id`)
 		.collapse-in-animation-inner
@@ -103,8 +103,6 @@ mixin message(vm, entity, sendMessageOnly)
 
 	.form-group(ng-class=`{ error: ${vm}.errors.message }`)
 		editor.tabset--light(ng-model=`${vm}.message`, user=`${vm}.AuthService.user`, placeholder="Message to user (mandatory if refusal)", markdown-text="Markdown enabled.")
-	if sendMessageOnly
-		button.btn.btn-hollow.pull-right(ng-click=`${vm}.sendMessage()`, ng-disabled="submitting") Send Message Only
 	div.alert.alert-danger.padder-bottom(ng-show=`${vm}.errors.message`)
 		+icon('warning').shift-up.space-right
 		| {{ #{vm}.errors.message }}
