--- a/src/app/template/_mixins.pug
+++ b/src/app/template/_mixins.pug
@@ -10,11 +10,11 @@ mixin icon(ref)
 			use(xlink:href=`#${ref}`)
 
 mixin paginator(pagination, paginate, num)
-	span(ng-show=`${pagination}.links.first`, ng-click=`${paginate}(${pagination}.links.first)`): +icon('angle-left-skip').shift-up.smaller.a.a--lighter
-	span.space-left(ng-show=`${pagination}.links.prev`, ng-click=`${paginate}(${pagination}.links.prev)`): +icon('angle-left').shift-up.smaller.a.a--lighter
-	span.small.space-left PAGE &nbsp; {{ !{pagination}.page }} / {{ !{pagination}.pageCount }}
-	span.space-left(ng-show=`${pagination}.links.next`, ng-click=`${paginate}(${pagination}.links.next)`): +icon('angle-right').shift-up.smaller.a.a--lighter
-	span.space-left(ng-show=`${pagination}.links.last`, ng-click=`${paginate}(${pagination}.links.last)`): +icon('angle-right-skip').shift-up.smaller.a.a--lighter
+	span(ng-show=`${pagination}.links.first`, ng-click=`${paginate}(${pagination}.links.first)`): +icon('angle-left-skip').shift-up-less.smaller.a.a--lighter
+	span.space-left(ng-show=`${pagination}.links.prev`, ng-click=`${paginate}(${pagination}.links.prev)`): +icon('angle-left').shift-up-less.smaller.a.a--lighter
+	span.small.space-left.shift-up PAGE &nbsp; {{ !{pagination}.page }} / {{ !{pagination}.pageCount }}
+	span.space-left(ng-show=`${pagination}.links.next`, ng-click=`${paginate}(${pagination}.links.next)`): +icon('angle-right').shift-up-less.smaller.a.a--lighter
+	span.space-left(ng-show=`${pagination}.links.last`, ng-click=`${paginate}(${pagination}.links.last)`): +icon('angle-right-skip').shift-up-less.smaller.a.a--lighter
 
 mixin loading(ngif)
 	loading#loading(ng-if=ngif)
