test: Fix broken tests.

--- a/src/app/releases/admin/add/release.add-07-upload.media.pug
+++ b/src/app/releases/admin/add/release.add-07-upload.media.pug
@@ -5,7 +5,7 @@
 span#media(ng-repeat="file in vm.meta.files | fileext:['vpt','vpx']")
 	h2.h--smaller
 		+icon('{{ file.icon }}').svg-2x.shift-up.space-right-less
-		| {{ file.name }}
+		span {{ file.name }}
 	hr.hr--light.hr--shifted-up
 	.row(ng-show="vm.getReleaseFile(file).flavor.orientation")
 
