--- a/src/styles/playfield.styl
+++ b/src/styles/playfield.styl
@@ -49,19 +49,19 @@
 		margin-bottom 25%
 
 .playfield--video
-	width 58.25%
+	width 58.25% !important
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: $bootstrap-screen-sm-min)
 	.playfield--video
-		width 146px
+		width 146px !important
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: $bootstrap-screen-md-min)
 	.playfield--video
-		width 193px
+		width 193px !important
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: $bootstrap-screen-lg-min)
 	.playfield--video
-		width 234px
+		width 234px !important
