--- a/src/styles/video.styl
+++ b/src/styles/video.styl
@@ -28,9 +28,177 @@
 	height 100%
 
 .video-js
-	color red
-	width 100%
-	height 100%
+	color white
+	font-family $font-content
 
 .vjs-live-controls, .vjs-playback-rate
 	display none
+
+
+// below a modified https://github.com/zanechua/videojs-sublime-inspired-skin
+.video-wrapper > .video-js
+	height 100%
+	width 100%
+	font-size 10px
+	color #fff
+	button
+		color #fff
+	.vjs-slider
+		background-color rgba(255, 255, 255, 0.3)
+		height 6.5px
+	.vjs-load-progress
+		background ligthen(#73859f, 25%)
+		background rgba(115, 133, 159, 0.5)
+		div
+			background ligthen(#73859f, 50%)
+			background rgba(115, 133, 159, 0.75)
+.theme-light .vjs-sublime-skin
+	.vjs-big-play-button
+		font-size 8em
+		line-height 1.5em
+		height 1.5em
+		width 3em
+		border 0
+		border-radius 0.3em
+		left 50%
+		top 50%
+		margin-left -1.5em
+		margin-top -0.75em
+	.vjs-poster
+		outline none
+		outline 0
+	&:hover
+		.vjs-big-play-button
+			background-color transparent
+	&.vjs-fullscreen
+		.vjs-fullscreen-control
+			background #fff
+			&:after
+				background #000
+				content ""
+				display block
+				position absolute
+				bottom 0
+				left 0
+				height 5px
+				width 5px
+	.vjs-fullscreen-control
+		border 3px solid #fff
+		box-sizing border-box
+		cursor pointer
+		margin-top -7px
+		top 50%
+		height 14px
+		width 22px
+		margin-right 10px
+		.vjs-icon-placeholder
+			display none
+	.vjs-progress-holder
+		margin 0
+	.vjs-progress-control
+		margin-right 50px
+		.vjs-progress-holder
+			&:after
+				display block
+				height 6.5px
+	.vjs-playback-rate
+		display none
+	.vjs-time-control
+		right 55px
+	.vjs-volume-menu-button
+		&:before
+			width 1.2em
+			z-index 1
+		.vjs-menu
+			left 23px
+	.vjs-audio-button
+		display none
+	.vjs-volume-bar
+		background url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACwAAAAcCAQAAACw95UnAAAAMElEQVRIx2NgoBL4n4YKGUYNHkEG4zJg1OCRYDCpBowaPJwMppbLRg0eNXjUYBLEAXWNUA6QNm1lAAAAAElFTkSuQmCC")
+		background-size 22px 14px
+		background-repeat no-repeat
+		height 100%
+		width 100%
+		max-width 22px
+		max-height 14px
+		margin 7px 4px
+		border-radius 0
+	.vjs-volume-level
+		url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACwAAAAcAQAAAAAyhWABAAAAAnRSTlMAAHaTzTgAAAAZSURBVHgBYwAB/g9EUv+JokCqiaT+U4MCAPKPS7WUUOc1AAAAAElFTkSuQmCC")
+		background-size 22px 14px
+		background-repeat no-repeat
+		max-width 22px
+		max-height 14px
+		height 100%
+	.vjs-volume-panel
+		.vjs-mute-control
+			width 2em
+			z-index 1
+			padding 0
+			&:hover
+				& ~ .vjs-volume-control
+					transition-property none
+					&.vjs-volume-horizontal
+						width 3em
+						height auto
+		.vjs-volume-control
+			display inline-block
+			position relative
+			left 5px
+			opacity 1
+			width 3em
+			height auto
+.video-js .vjs-control-bar,
+.video-js .vjs-big-play-button,
+.video-js .vjs-volume-menu-button .vjs-menu-content,
+.video-js .vjs-volume-panel .vjs-volume-control
+	background-color transparent
+.video-js .vjs-volume-level,
+.video-js .vjs-play-progress,
+.video-js .vjs-slider-bar
+	background #fff
+.video-js .vjs-progress-holder .vjs-load-progress,
+.video-js .vjs-progress-holder .vjs-load-progress div,
+.video-js .vjs-progress-holder .vjs-play-progress,
+.video-js .vjs-progress-holder .vjs-tooltip-progress-bar
+	height 6.5px
+.vjs-sublime-skin .vjs-fullscreen-control:before,
+.vjs-sublime-skin.vjs-fullscreen .vjs-fullscreen-control:before
+	content ''
+.vjs-sublime-skin .vjs-progress-control .vjs-load-progres,
+.vjs-sublime-skin .vjs-progress-control .vjs-play-progress
+	height 6.5px
+.vjs-sublime-skin .vjs-volume-menu-button .vjs-menu,
+.vjs-sublime-skin .vjs-volume-menu-button:focus .vjs-menu,
+.vjs-sublime-skin .vjs-volume-menu-button.vjs-slider-active .vjs-menu
+	display block
+	opacity 1
+.vjs-sublime-skin .vjs-volume-menu-button,
+.vjs-sublime-skin .vjs-volume-panel
+	width 6em
+	position absolute
+	right 0
+	margin-right 30px
+.vjs-sublime-skin .vjs-volume-menu-button .vjs-menu-content,
+.vjs-sublime-skin .vjs-volume-menu-button:hover,
+.vjs-sublime-skin .vjs-volume-menu-button:focus,
+.vjs-sublime-skin .vjs-volume-menu-button.vjs-slider-active,
+.vjs-sublime-skin .vjs-volume-panel .vjs-volume-control,
+.vjs-sublime-skin .vjs-volume-panel:hover,
+.vjs-sublime-skin .vjs-volume-panel:focus,
+.vjs-sublime-skin .vjs-volume-panel.vjs-slider-active
+	width 6em
+.vjs-sublime-skin .vjs-mouse-display:before,
+.vjs-sublime-skin .vjs-play-progress:before,
+.vjs-sublime-skin .vjs-volume-level:before
+	content ''
+.vjs-sublime-skin .vjs-mouse-display:after,
+.vjs-sublime-skin .vjs-play-progress:after,
+.vjs-sublime-skin .vjs-time-tooltip
+	width 5.5em
+.vjs-sublime-skin .vjs-volume-panel.vjs-volume-panel-horizontal.vjs-slider-active,
+.vjs-sublime-skin .vjs-volume-panel.vjs-volume-panel-horizontal:active,
+.vjs-sublime-skin .vjs-volume-panel.vjs-volume-panel-horizontal:focus,
+.vjs-sublime-skin .vjs-volume-panel.vjs-volume-panel-horizontal:hover
+	width 6em
+	transition-property none
