fix(login): Fix alert margin and color in modal.

--- a/src/app/common/auth/login.modal.pug
+++ b/src/app/common/auth/login.modal.pug
@@ -6,8 +6,8 @@ include ../../template/_mixins
 			+icon('lock').space-right
 			| &nbsp;Login
 	.modal-body
-		div.alert.padder-bottom(ng-show="vm.headMessage")
-			+icon('info').space-right.shift-up
+		div.alert.alert-warning.alert--modal-top-alert.padder-bottom(ng-show="vm.headMessage")
+			+icon('info').space-right.shift-up-less
 			| {{ vm.headMessage }}
 
 		.span(ng-hide="vm.LoginService.loginParams.localOnly")
