--- a/src/styles/modals.styl
+++ b/src/styles/modals.styl
@@ -70,8 +70,10 @@
 	position fixed
 	bottom 0
 
-// lightbox
+.modal-dialog .alert.alert--modal-top-alert
+	margin-top -16px;
 
+// lightbox
 .mfp-bg
 	z-index 2999
 .mfp-wrap
