fix(releases): Open download modal after login redirection.

--- a/src/app/releases/details/release.details.pug
+++ b/src/app/releases/details/release.details.pug
@@ -32,7 +32,7 @@ include ../../template/_mixins
 
 		//-- DOWNLOAD BUTTON
 		//---------------------------------------------------------------------
-		.text-center: button.btn.btn-primary.padder-top.padder-bottom.text-center(ng-click="vm.download(vm.game)")
+		.text-center: button.btn.btn-primary.padder-top.padder-bottom.text-center(ng-click="vm.download()")
 			+icon('download-circle').space-right.hidden-sm.hidden-md
 			| Download
 
