fix: Use ng-attr-placeholder instead of placeholder to avoid error in IE. Closes #101.

--- a/src/app/shared/editor/editor.directive.pug
+++ b/src/app/shared/editor/editor.directive.pug
@@ -18,7 +18,7 @@ div(ng-class="{ media: !!user }")
 					+icon('edit')
 					.panel-triangle(ng-show="user")
 				textarea.textarea--full.animate(
-					placeholder="{{ $parent.$parent.placeholder }}",
+					ng-attr-placeholder="{{ $parent.$parent.placeholder }}",
 					ng-attr-id="{{::textareaId}}"
 					ng-model="$parent.$parent.text",
 					ng-trim="false",
