--- a/src/app/releases/details/release.details.pug
+++ b/src/app/releases/details/release.details.pug
@@ -1,12 +1,12 @@
 include ../../template/_mixins
 
-+loading("vm.pageLoading")
++loading("vm.status.release.loading")
 
-.row.ng-cloak.row--fullheight.fade-animation(ng-show="!vm.pageLoading")
+.row.ng-cloak.row--fullheight(ng-cloak)
 
 	//-- RIGHT COLUMN
 	//-====================================================================
-	.col-sm-4.col-md-3.col-sm-push-8.col-md-push-9.col--menu(ng-if="vm.found")
+	.col-sm-4.col-md-3.col-sm-push-8.col-md-push-9.col--menu(ng-if="vm.release")
 
 		a.a--block.text-center(ui-sref="gameDetails({id: vm.game.id})")
 			img.img--logo(ng-src="{{ vm.App.img(vm.game.logo, 'medium') }}").padder-bottom
@@ -87,7 +87,7 @@ include ../../template/_mixins
 
 	//-- LEFT COLUMN (main content)
 	//-====================================================================
-	.col-sm-8.col-md-9.col-sm-pull-4.col-md-pull-3.col--main(ng-show="vm.found")
+	.col-sm-8.col-md-9.col-sm-pull-4.col-md-pull-3.col--main(ng-show="vm.release")
 
 		.alert.alert-danger.no-space-top(ng-if="vm.game.restrictions.release.mpu")
 			+icon('warning').shift-up.space-right
@@ -258,9 +258,13 @@ include ../../template/_mixins
 		.clearfix
 		p.padder-bottom-2x
 
-	.padder-top.space-left-2x.text-center(ng-if="!vm.found && !vm.pageLoading")
+	.padder-top.space-left-2x.text-center(ng-if="vm.status.release.statusCode === 404")
 		img.pinball-destruct(ng-src="{{ vm.imgPinDestruct }}")
 		p Whoops, that release doesn't exist!
 		p.padder-bottom-2x(ng-show="!vm.AuthService.isAuthenticated") If you're looking for a moderated release, try logging in.
+
+	.padder-top.space-left-2x.text-center(ng-if="vm.status.release.error && vm.status.release.statusCode !== 404")
+		img.pinball-destruct(ng-src="{{ vm.imgPinDestruct }}")
+		p.padder-bottom-2x {{ vm.status.release.error }}
 
 	jsonld(json="vm.ldRelease")
