--- a/src/app/content/faq/faq.pug
+++ b/src/app/content/faq/faq.pug
@@ -1,6 +1,6 @@
 include ../../template/_mixins
 
-.row.row--content.ng-cloak.row--fullheight.fade-animation(ng-controller="FaqCtrl as vm")
+.row.row--content.ng-cloak.row--fullheight.fade-animation
 
 	h1.h--primary Frequently Asked Questions
 
