--- a/src/app/content/legal/legal.pug
+++ b/src/app/content/legal/legal.pug
@@ -1,6 +1,6 @@
 include ../../template/_mixins
 
-.row.row--content.ng-cloak.row--fullheight.fade-animation(ng-controller="LegalCtrl as vm")
+.row.row--content.ng-cloak.row--fullheight.fade-animation
 
 	h1.h--primary.padder-bottom-2x Terms of Use
 
