--- a/src/app/content/privacy/privacy.pug
+++ b/src/app/content/privacy/privacy.pug
@@ -1,6 +1,6 @@
 include ../../template/_mixins
 
-.row.row--content.ng-cloak.row--fullheight.fade-animation(ng-controller="PrivacyCtrl as vm")
+.row.row--content.ng-cloak.row--fullheight.fade-animation
 
 	h1.h--primary.padder-bottom Privacy Policy
 
