--- a/src/app/games/details/medium.info.modal.pug
+++ b/src/app/games/details/medium.info.modal.pug
@@ -40,5 +40,5 @@ include ../../template/_mixins
 
 
 	.modal-footer
-		button.btn.btn-hollow.pull-left(ng-click="$dismiss()") Cancel
+		button.btn.btn-hollow.pull-left(ng-click="$dismiss()") Close
 		button.btn.btn-primary(ng-click="vm.download(vm.medium.file)") Download
