profile: Fix `is_local` check.

--- a/src/app/admin/users/user.edit.admin.modal.pug
+++ b/src/app/admin/users/user.edit.admin.modal.pug
@@ -29,7 +29,7 @@ include ../../template/_mixins
 				.col-sm-7
 					input.form-control(ng-model="vm.user.email", ng-required)
 				.col-sm-2
-					button.btn.btn-hollow.btn-xs(ng-click="vm.sendConfirmation()", ng-show="vm.originalUser.provider === 'local' && !vm.originalUser.is_active", title="Sends the confirmation mail") Resend
+					button.btn.btn-hollow.btn-xs(ng-click="vm.sendConfirmation()", ng-show="vm.originalUser.is_local && !vm.originalUser.is_active", title="Sends the confirmation mail") Resend
 
 			.form-group(ng-class="{ error: vm.errors.roles }")
 				label.col-sm-3.control-label Roles
