--- a/src/app/admin/tokens/token.list.admin.pug
+++ b/src/app/admin/tokens/token.list.admin.pug
@@ -34,7 +34,7 @@ include ../../template/_mixins
 					td.td--icon(title="Deactivate"): +icon("{{ token.is_active ? 'times' : 'check' }}")(ng-click="vm.toggleToken(token)").a.shift-up-less
 					td.td--icon(title="Delete"): +icon('trash')(ng-click="vm.deleteToken(token)").a.shift-up-less
 
-		span(ng-hide="vm.tokens.length > 0") There are no provier tokens yet.
+		span(ng-hide="vm.tokens.length > 0") There are no provider tokens yet.
 
 		.clearfix
 		button.btn.btn-default.pull-right(ng-click="vm.createToken()")
